# QB_Connector_Receive_Payment_Python_Fall_2025

./: .gitignore  .pre-commit-config.yaml  .~lock.company_data.xlsx#  README.md  company_data.xlsx  customer_payment_terms_cli.spec  customer_payment_terms_report.json  pyproject.toml  receive_payments.spec
src/: __init__.py  __main__.py  cli.py  comparer.py  demopy.py  excel_reader.py  models.py  mutliple_invoicepy.py  qb_gateway.py  reporting.py  runner.py  test.py  updated.py
